WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172327
Attachment drag preview should not have the attachment outline
https://bugs.webkit.org/show_bug.cgi?id=172327
Summary
Attachment drag preview should not have the attachment outline
Wenson Hsieh
Reported
2017-05-18 17:46:27 PDT
<
rdar://problem/32282831
>
Attachments
Patch
(4.35 KB, patch)
2017-05-18 17:58 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-05-18 17:58:15 PDT
Created
attachment 310584
[details]
Patch
WebKit Commit Bot
Comment 2
2017-05-18 18:44:59 PDT
Comment on
attachment 310584
[details]
Patch Clearing flags on attachment: 310584 Committed
r217083
: <
http://trac.webkit.org/changeset/217083
>
WebKit Commit Bot
Comment 3
2017-05-18 18:45:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug