Attachment drag preview should not have the attachment outline https://bugs.webkit.org/show_bug.cgi?id=172327 <rdar://problem/32282831>

Reviewed by Tim Horton.

When creating a drag image for an attachment element, don't include borders around the attachment.

* page/DragController.cpp:
(WebCore::DragController::startDrag):
* rendering/RenderAttachment.h:
* rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::paintAttachment):


Canonical link: https://commits.webkit.org/189225@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217083 268f45cc-cd09-0410-ab3c-d52691b4dbfc